--- a/VprServer/Dockerfile
+++ b/VprServer/Dockerfile
@@ -1,4 +1,7 @@
 FROM nvidia/cuda:12.1.1-runtime-ubuntu22.04
+
+ENV PYTHONUNBUFFERED=1
+
 RUN apt-get update && \
     apt-get install -y python3-pip python3-dev && \
     rm -rf /var/lib/apt/lists/*
